--- a/Pages/labels.html
+++ b/Pages/labels.html
@@ -8,6 +8,7 @@
 <div id="labels" >
     <ul class="Label">
         <li v-for="pep in peps">
+            <input type="checkbox" v-bin:checkbox>
             <a href="" style="color: #ffffff; text-decoration: none;">{{ pep.term }}</a>
         </li>
     </ul>
@@ -20,14 +21,21 @@
             this.fetchData();
         },
         data: {
-            peps: []
+            peps: [],
+            labels: [],
         },
         methods: {
             fetchData() {
                 axios.get('https://heegreis.blogspot.com/feeds/posts/summary?alt=json&max-results=0').then(response => {
                     this.peps = response.data.feed.category;
+                    this.addAttri();
                 });
-            }
+            },
+            addAttri(){
+                for (let i = 0; i < this.peps.length; i++) {
+                    this.labels.push({name:this.peps[i], show:'true', check:'false'});
+                }
+            },
         }
     });
 </script>
