hide the test message

--- a/Pages/labels.html
+++ b/Pages/labels.html
@@ -66,8 +66,8 @@
             <a href="" style="color: #ffffff; text-decoration: none;">{{ pep.term }}</a>
         </li>
     </ul>
-    <div>:{{labels}}</div>
-    <div>:{{checkedNames}}</div>
+    <!-- <div>:{{labels}}</div>
+    <div>:{{checkedNames}}</div> -->
 </div>
 
 <script>
