--- a/TemplateWithMarkdown.html
+++ b/TemplateWithMarkdown.html
@@ -1,5 +1,22 @@
 <!-- add below to Contempo(black) at the bottom of head -->
-    <!-- markdown 程式高亮 highlight.js -->
+	<!-- 顯示指定的快顯圖片 -->
+	<b:if cond='data:blog.pageType == &quot;item&quot;'> 
+		<meta expr:content='data:blog.pageName' property='og:title'/> 
+		<meta expr:content='data:blog.canonicalUrl' property='og:url'/> 
+		<meta content='article' property='og:type'/> 
+	</b:if> 
+	<meta expr:content='data:blog.title' property='og:site_name'/> 
+	<b:if cond='data:blog.postImageUrl'> 
+		<meta expr:content='data:blog.postImageUrl' property='og:image'/> 
+		<link expr:href='data:blog.postImageUrl' rel='image_src'/> 
+	<b:else/> 
+		<meta content='https://lh3.googleusercontent.com/1HsKuIUKLtASKZ2N6_Masg9vkahhGjN9gyH6F18uY6420Vy27HutsTRuJGHDB4_MwQYMKIr17Iw90U0AruUdMPfD7uczCDUFKTum7SFp0oUnPQTVn5h4m2zRKMN2KPLKYAmorRnDlOJTOqZVl_v7PqPeXdih4t-j9HcD5SdBGPND-jeftDjfvPJr0QGnisgCCiehkx5lcLF_rePTvnTQBqYiE13caQUFCkaviRl9EExYeR1Acpc0fuq-Ph-_KauEAHaiVl6pCEze2xaqj_6W-IcMJ6fp1nPhSQHS_dJCCaYZb9-_XSMTGB-4d1VFnfSCOKs4mzpJRoW7_cAvluGYMMVMXbPIwVNQweFkyE6QIFkHw7uQ7tGYMPxBgv4TkIPoH1vAdgxICr3FvXJJbHMZOoFlj4Pf9WwMnEYN_CNHPN6kkZtz1lhgQBjuZinKNdYh8MYuuQLq5ePMVXQGHFNnLjRT67L9cxlZHyvnE99EEAxPdpZMlFIxYaKHwpz5C3d2480a3AhWTJoaKR4XEEZivZexv1_jZQ7mdcAhaIn7OMofdN-z1er-1SA8xngU6Vq6LHIE8Fw_CNvmDGeu1edx3nLZZXq1H8eFbJ8yklLGXwBtue8Z4WpMsAZxEhI0TFC7Pspoc6qxavtlj9JAQ8ZnR4bxoAbeWM8=w960-h574-no' property='og:image'/> 
+		<link href='https://lh3.googleusercontent.com/1HsKuIUKLtASKZ2N6_Masg9vkahhGjN9gyH6F18uY6420Vy27HutsTRuJGHDB4_MwQYMKIr17Iw90U0AruUdMPfD7uczCDUFKTum7SFp0oUnPQTVn5h4m2zRKMN2KPLKYAmorRnDlOJTOqZVl_v7PqPeXdih4t-j9HcD5SdBGPND-jeftDjfvPJr0QGnisgCCiehkx5lcLF_rePTvnTQBqYiE13caQUFCkaviRl9EExYeR1Acpc0fuq-Ph-_KauEAHaiVl6pCEze2xaqj_6W-IcMJ6fp1nPhSQHS_dJCCaYZb9-_XSMTGB-4d1VFnfSCOKs4mzpJRoW7_cAvluGYMMVMXbPIwVNQweFkyE6QIFkHw7uQ7tGYMPxBgv4TkIPoH1vAdgxICr3FvXJJbHMZOoFlj4Pf9WwMnEYN_CNHPN6kkZtz1lhgQBjuZinKNdYh8MYuuQLq5ePMVXQGHFNnLjRT67L9cxlZHyvnE99EEAxPdpZMlFIxYaKHwpz5C3d2480a3AhWTJoaKR4XEEZivZexv1_jZQ7mdcAhaIn7OMofdN-z1er-1SA8xngU6Vq6LHIE8Fw_CNvmDGeu1edx3nLZZXq1H8eFbJ8yklLGXwBtue8Z4WpMsAZxEhI0TFC7Pspoc6qxavtlj9JAQ8ZnR4bxoAbeWM8=w960-h574-no' rel='image_src'/> 
+	</b:if> 
+	<b:if cond='data:blog.metaDescription != &quot;&quot;'> 
+		<meta expr:content='data:blog.metaDescription' name='og:description'/> 
+	</b:if>
+	<!-- markdown 程式高亮 highlight.js -->
 	<link href='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css' rel='stylesheet'/>
 	<script src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js'/>
 
